fix page transition mechanism

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
             android:label="redirect">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="app" android:host="redirect" />
+
+                <data
+                    android:scheme="app"
+                    android:host="redirect"/>
             </intent-filter>
         </activity>
     </application>
