--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,7 +1,12 @@
-POM_NAME=android
+POM_NAME=App-Architecture Application
 POM_ARTIFACT_ID=app-architecture-android
 POM_DESCRIPTION=A app architecture simple implement library
 POM_PACKAGING=aar
 
+#SNAPSHOT
 VERSION_NAME=1.2.0-SNAPSHOT
-VERSION_CODE=14
+VERSION_CODE=15
+
+#RELEASE
+#VERSION_NAME=1.0
+#VERSION_CODE=1
