--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -1,7 +1,12 @@
-POM_NAME=framework
+POM_NAME=App-Architecture Framework
 POM_ARTIFACT_ID=app-architecture-framework
 POM_DESCRIPTION=A app architecture framework library
 POM_PACKAGING=jar
 
-VERSION_NAME=1.1.3-SNAPSHOT
-VERSION_CODE=7
+#SNAPSHOT
+#VERSION_NAME=1.1.3-SNAPSHOT
+#VERSION_CODE=7
+
+#RELEASE
+VERSION_NAME=1.0
+VERSION_CODE=1
