--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ subprojects { project ->
         jcenter()
         mavenCentral()
         maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots/"
+//            url "https://oss.sonatype.org/content/repositories/snapshots/"
+            url "https://oss.sonatype.org/service/local/repositories/releases/content/"
         }
     }
 
