--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -4,9 +4,9 @@ POM_DESCRIPTION=A app architecture framework library
 POM_PACKAGING=jar
 
 #SNAPSHOT
-#VERSION_NAME=1.1.3-SNAPSHOT
-#VERSION_CODE=7
+VERSION_NAME=1.1.4-SNAPSHOT
+VERSION_CODE=8
 
 #RELEASE
-VERSION_NAME=1.0
-VERSION_CODE=1
+#VERSION_NAME=1.0
+#VERSION_CODE=1
