--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         htmlOutput file("$project.buildDir/reports/lint/lint-result.html")
         xmlOutput file("$project.buildDir/reports/lint/lint-result.xml")
     }
+    buildToolsVersion '23.0.3'
 }
 
 dependencies {
@@ -40,7 +41,7 @@ dependencies {
     compile libraries.rxjava
 
 //    compile "com.github.frodoking:app-architecture-framework:1.1"
-    compile "com.github.frodoking:app-architecture-framework:1.1.6-SNAPSHOT"
+    compile "com.github.frodoking:app-architecture-framework:1.2.0-SNAPSHOT"
 //    compile project(":framework")
 
     debugCompile libraries.leakcanary_android
