--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -40,10 +40,11 @@ android {
         paid {}
         free {}
     }
+    buildToolsVersion '23.0.3'
 }
 
 dependencies {
     compile libraries.rxandroid
 //    compile project(':app')
-    compile "com.github.frodoking:app-architecture-android:1.2.5-SNAPSHOT"
+    compile "com.github.frodoking:app-architecture-android:1.2.6-SNAPSHOT"
 }
