--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -4,7 +4,7 @@ POM_DESCRIPTION=A app architecture framework library
 POM_PACKAGING=jar
 
 #SNAPSHOT
-VERSION_NAME=1.2.2-SNAPSHOT
+VERSION_NAME=1.2.2-LOCAL-SNAPSHOT
 VERSION_CODE=12
 
 #RELEASE
