--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-android.useDeprecatedNdk=true
+LOCAL_REPOSITORY_URL=file:///D:/M2/localRepository/
+SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots/
+RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2/ 
 
 POM_GROUP_ID=com.github.frodoking
 POM_URL=https://github.com/frodoking/App-Architecture
@@ -19,5 +21,6 @@ POM_INCEPTION_YEAR=2016
 POM_BINTRAY_PRPO=maven
 POM_GIT_URL=https://github.com/frodoking/App-Architecture.git
 POM_LICENCE_ALL=["Apache-2.0"]
+
 
 
