--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -45,6 +45,6 @@ android {
 
 dependencies {
     compile libraries.rxandroid
-    compile project(':app')
-//    compile "com.github.frodoking:app-architecture-android:1.2.6-SNAPSHOT"
+//    compile project(':app')
+    compile "com.github.frodoking:app-architecture-android:1.2.8-LOCAL-SNAPSHOT"
 }
