fix gradle script

--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -4,8 +4,8 @@ POM_DESCRIPTION=A app architecture simple implement library
 POM_PACKAGING=aar
 
 #SNAPSHOT
-VERSION_NAME=1.2.8-LOCAL-SNAPSHOT
-VERSION_CODE=23
+VERSION_NAME=1.2.9-SNAPSHOT
+VERSION_CODE=24
 
 #RELEASE
 #VERSION_NAME=1.0
