--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion COMPILE_SDK_VERSION
-    buildToolsVersion BUILD_TOOLS_VERSION
+    compileSdkVersion getProperty('COMPILE_SDK_VERSION') as int
+    buildToolsVersion getProperty('BUILD_TOOLS_VERSION')
 
     defaultConfig {
-        applicationId BASE_PACKAGENAME
-        minSdkVersion MIN_SDK_VERSION
-        targetSdkVersion TARGET_SDK_VERSION
+        applicationId getProperty('BASE_PACKAGENAME')
+        minSdkVersion getProperty('MIN_SDK_VERSION')
+        targetSdkVersion getProperty('TARGET_SDK_VERSION')
     }
 
     packagingOptions {
@@ -40,7 +40,6 @@ android {
         paid {}
         free {}
     }
-    buildToolsVersion '23.0.3'
 }
 
 dependencies {
