--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -4,8 +4,8 @@ POM_DESCRIPTION=A app architecture framework library
 POM_PACKAGING=jar
 
 #SNAPSHOT
-VERSION_NAME=1.2.2-LOCAL-SNAPSHOT
-VERSION_CODE=12
+VERSION_NAME=1.2.3-SNAPSHOT
+VERSION_CODE=13
 
 #RELEASE
 #VERSION_NAME=1.1
