--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     // replace with rxjava
     compile libraries.rxjava
 
-//    compile "com.github.frodoking:app-architecture-framework:1.1"
-    compile "com.github.frodoking:app-architecture-framework:1.2.3-SNAPSHOT"
-//    compile project(":framework")
+//    compile 'com.github.frodoking:app-architecture-framework:1.1'
+//    compile "com.github.frodoking:app-architecture-framework:1.2.3-SNAPSHOT"
+    compile project(":framework")
 
     debugCompile libraries.leakcanary_android
     releaseCompile libraries.leakcanary_android_no_op
