--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,12 @@ dependencies {
     compile libraries.rxjava
 
 //    compile 'com.github.frodoking:app-architecture-framework:1.1'
-//    compile "com.github.frodoking:app-architecture-framework:1.2.3-SNAPSHOT"
-    compile project(":framework")
+    compile "com.github.frodoking:app-architecture-framework:1.2.3-SNAPSHOT"
+//    compile project(":framework")
 
-    debugCompile libraries.leakcanary_android
-    releaseCompile libraries.leakcanary_android_no_op
+    compile libraries.leakcanary_android
+//    releaseCompile libraries.leakcanary_android_no_op
+//    testCompile libraries.leakcanary_android_no_op
 }
 
 apply from: "${rootProject.rootDir}/scripts/quality/quality.gradle"
