--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -3,6 +3,8 @@ POM_ARTIFACT_ID=app-architecture-android
 POM_DESCRIPTION=A app architecture simple implement library
 POM_PACKAGING=aar
 
+REDIRECT_SCHEME=frodo
+
 #SNAPSHOT
 VERSION_NAME=1.2.11-SNAPSHOT
 VERSION_CODE=26
