--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -45,5 +45,5 @@ android {
 dependencies {
     compile libraries.rxandroid
     compile project(':app')
-//    compile "com.github.frodoking:app-architecture-android:1.2.8-LOCAL-SNAPSHOT"
+//    compile "com.github.frodoking:app-architecture-android:1.2"
 }
