--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -4,9 +4,9 @@ POM_DESCRIPTION=A app architecture simple implement library
 POM_PACKAGING=aar
 
 #SNAPSHOT
-#VERSION_NAME=1.2.11-LOCAL-SNAPSHOT
-#VERSION_CODE=26
+VERSION_NAME=1.2.12-LOCAL-SNAPSHOT
+VERSION_CODE=27
 
 #RELEASE
-VERSION_NAME=1.2
-VERSION_CODE=3
+#VERSION_NAME=1.2
+#VERSION_CODE=3
