--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -4,8 +4,8 @@ POM_DESCRIPTION=A app architecture framework library
 POM_PACKAGING=jar
 
 #SNAPSHOT
-VERSION_NAME=1.2.4-LOCAL-SNAPSHOT
-VERSION_CODE=14
+VERSION_NAME=1.2.5-SNAPSHOT
+VERSION_CODE=15
 
 #RELEASE
 #VERSION_NAME=1.1
