--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -4,8 +4,8 @@ POM_DESCRIPTION=A app architecture simple implement library
 POM_PACKAGING=aar
 
 #SNAPSHOT
-VERSION_NAME=1.2.12-LOCAL-SNAPSHOT
-VERSION_CODE=27
+VERSION_NAME=1.2.13-SNAPSHOT
+VERSION_CODE=28
 
 #RELEASE
 #VERSION_NAME=1.2
