--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -4,7 +4,7 @@ POM_DESCRIPTION=A app architecture simple implement library
 POM_PACKAGING=aar
 
 #SNAPSHOT
-VERSION_NAME=1.2.13-SNAPSHOT
+VERSION_NAME=1.2.13-LOCAL-SNAPSHOT
 VERSION_CODE=28
 
 #RELEASE
