--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -44,6 +44,6 @@ android {
 
 dependencies {
     compile libraries.rxandroid
-//    compile project(':app')
-    compile "com.github.frodoking:app-architecture-android:1.2.13-SNAPSHOT"
+    compile project(':app')
+//    compile "com.github.frodoking:app-architecture-android:1.2.13-SNAPSHOT"
 }
