--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -4,6 +4,7 @@ POM_DESCRIPTION=A app architecture framework library
 POM_PACKAGING=jar
 
 #SNAPSHOT
+#VERSION_NAME=1.2.5-LOCAL-SNAPSHOT
 VERSION_NAME=1.2.5-SNAPSHOT
 VERSION_CODE=15
 
