--- a/framework/gradle.properties
+++ b/framework/gradle.properties
@@ -5,9 +5,9 @@ POM_PACKAGING=jar
 
 #SNAPSHOT
 #VERSION_NAME=1.2.5-LOCAL-SNAPSHOT
-VERSION_NAME=1.2.5-SNAPSHOT
-VERSION_CODE=15
+#VERSION_NAME=1.2.5-SNAPSHOT
+#VERSION_CODE=15
 
 #RELEASE
-#VERSION_NAME=1.1
-#VERSION_CODE=2
+VERSION_NAME=1.3
+VERSION_CODE=4
