--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,9 @@ dependencies {
             libraries.stetho_okhttp3,
     )
 
-//    compile 'com.github.frodoking:app-architecture-framework:1.2'
+    compile 'com.github.frodoking:app-architecture-framework:1.3'
 //    compile "com.github.frodoking:app-architecture-framework:1.2.5-LOCAL-SNAPSHOT"
-    compile project(":framework")
+//    compile project(":framework")
 }
 
 apply from: "${rootProject.rootDir}/scripts/quality/quality.gradle"
