--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -5,9 +5,9 @@ POM_PACKAGING=aar
 
 #SNAPSHOT
 #VERSION_NAME=1.2.13-LOCAL-SNAPSHOT
-VERSION_NAME=1.2.13-SNAPSHOT
-VERSION_CODE=28
+#VERSION_NAME=1.2.13-SNAPSHOT
+#VERSION_CODE=28
 
 #RELEASE
-#VERSION_NAME=1.2
-#VERSION_CODE=3
+VERSION_NAME=1.3
+VERSION_CODE=4
