--- a/scripts/dependencyDefinitions.gradle
+++ b/scripts/dependencyDefinitions.gradle
@@ -1,13 +1,13 @@
 ext.versions = [
         guava        : '19.0',
-        okhttp       : '3.4.1',
-        gson         : '2.7',
+        okhttp       : '3.7.0',
+        gson         : '2.8.0',
         picasso      : '2.5.2',
         glide        : '3.7.0',
-        fresco       : '0.13.0',
-        rxjava       : '1.2.0',
-        rxandroid    : '1.2.1',
-        leakcanary   : '1.4-beta2',
+        fresco       : '1.3.0',
+        rxjava       : '2.1.0',
+        rxandroid    : '2.0.1',
+        leakcanary   : '1.5.1',
         support      : getProperty('SUPPORT_VERSION'),
 
         // test
@@ -20,7 +20,7 @@ ext.versions = [
         espresso     : '2.2.1',
 
 //        tools
-        stetho       : '1.4.1'
+        stetho       : '1.5.0'
 ]
 
 ext.libraries = [
@@ -41,9 +41,9 @@ ext.libraries = [
         // event bus
         // otto                : "com.squareup:otto:${versions.otto}",
         // rxjava replace otto
-        rxjava                               : "io.reactivex:rxjava:${versions.rxjava}",
+        rxjava                               : "io.reactivex.rxjava2:rxjava:${versions.rxjava}",
         // rxandroid
-        rxandroid                            : "io.reactivex:rxandroid:${versions.rxandroid}",
+        rxandroid                            : "io.reactivex.rxjava2:rxandroid:${versions.rxandroid}",
 
         // leakcanary
         leakcanary_android                   : "com.squareup.leakcanary:leakcanary-android:${versions.leakcanary}",
